--- a/Kannada-NER.ipynb
+++ b/Kannada-NER.ipynb
@@ -197,8 +197,8 @@
     "# Save the processed data to JSON files in the JSON folder\n",
     "save_data_to_json(train_X, os.path.join(json_dir, 'train_X.json'))  # Save train_X\n",
     "save_data_to_json(train_y, os.path.join(json_dir, 'train_y.json'))  # Save train_y\n",
-    "save_data_to_json(test_X, os.path.join(json_dir, 'test_X.json'))  # Save train_X\n",
-    "save_data_to_json(test_y, os.path.join(json_dir, 'test_y.json'))  # Save train_y\n",
+    "#save_data_to_json(test_X, os.path.join(json_dir, 'test_X.json'))  # Save test_X\n",
+    "#save_data_to_json(test_y, os.path.join(json_dir, 'test_y.json'))  # Save test_y\n",
     "\n",
     "\n",
     "# Save vocabulary mappings to JSON files in the JSON folder\n",
